syntax = "proto3";

import "google/protobuf/timestamp.proto";
option go_package = "./pb";

message TransmitterRequest {
}

message TransmitterResponse {
  string session_id = 1;
  double frequency = 2;
  google.protobuf.Timestamp timestamp = 3;
}

service Transmitter {
  rpc Transmit(TransmitterRequest) returns (stream TransmitterResponse) {};
}